--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -21,7 +21,7 @@ bigtest: bigtest.o ${DYNAMIC_ANNOTATIONS_CC}
 		 -I${DYNAMIC_ANNOTATIONS_DIR} -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -c -o $@
 
 win: racecheck_unittest.cc old_test_suite.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_win.h old_test_suite.h test_utils.h
-	cl.exe ${CXXFLAGS} /Od /EHsc /nologo \
+	cl.exe ${CXXFLAGS} /Od /Zi /EHsc /nologo \
 		/D "DYNAMIC_ANNOTATIONS_ENABLED=1" /D "WIN32" \
 		-I${DYNAMIC_ANNOTATIONS_DIR} \
 		racecheck_unittest.cc old_test_suite.cc \
