get rid of valgrind.patch; new script for building valgrind
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1374 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -1,5 +1,5 @@
 VALGRIND_ROOT=../third_party/valgrind
-VALGRIND_INST_ROOT=/tmp/tsan_inst
+VALGRIND_INST_ROOT=$(HOME)/tsan_inst
 STLPORT_ROOT=../third_party/stlport
 GTEST_ROOT=../third_party/googletest
 OFFLINE=1
