get rid of a separate suppression file
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1382 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/tsan/Makefile
+++ b/tsan/Makefile
@@ -141,13 +141,15 @@ w: w32
 w32: w32d
 
 m: m32
-m32: m32o
+m32: m32o m32d
 
 w32d:
 	$(MAKE) all OS=windows ARCH=x86 DEBUG=1
 
 m32o:
 	$(MAKE) all OS=darwin ARCH=x86 DEBUG=0
+m32d:
+	$(MAKE) all OS=darwin ARCH=x86 DEBUG=1
 
 install:
 	cp bin/tsan* bin/vgpreload_tsan* $(VALGRIND_INST_ROOT)/lib/valgrind
@@ -184,6 +186,10 @@ bin:
 	mkdir -p bin
 
 TS_HEADERS=thread_sanitizer.h ts_util.h suppressions.h
+ifeq ($(DEBUG), 0)
+  # in optimized buld, we include thread_sanitizer.cc into other files.
+  TS_HEADERS+=thread_sanitizer.cc
+endif
 TS_VG_HEADERS=ts_valgrind.h ts_valgrind_client_requests.h ts_wrap_and_ignore.h
 
 TS_VG_OBJECTS=$(VGP)thread_sanitizer.o $(VGP)ts_valgrind.o $(VGP)ts_util.o $(VGP)suppressions.o
