Support simulateous builds of unit tests for different os/arch/debug settings.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1447 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -1,35 +1,105 @@
+GTEST_ROOT=../third_party/googletest
 CXX=g++
 CC=gcc
 
 SUFFIX=
-CXXFLAGS=
+COPT=
+CXXOPT=
+ARCHFLAGS=
+STATICFLAGS=
+CFLAGS=-g $(COPT) $(ARCHFLAGS)
+CXXFLAGS=-g $(CXXOPT) $(ARCHFLAGS)
+LDFLAGS=$(ARCHFLAGS) $(STATICFLAGS)
+OS=   # linux, darwin
+ARCH= # x86, amd64
+OX=    # O0, O1, ...
+S=    # <empty>, -static
+BUILD=${OS}-${ARCH}-${OX}${S}
+BIN=bin/
 
-all: racecheck_unittest demo_tests bigtest
+ifeq ($(OPT), 1)
+  OX=O1
+  COPT=-O1
+  CXXOPT=-O1
+else
+  OX=O0
+  COPT=-O0
+  CXXOPT=-O0
+endif
+
+ifeq ($(STATIC), 1)
+  S=-static
+  STATICFLAGS=-static
+else
+  S=
+  STATICFLAGS=
+endif
+
+ifeq ($(ARCH), x86)
+  ARCHFLAGS=-m32
+else ifeq ($(ARCH), amd64)
+  ARCHFLAGS=-m64
+else
+  ARCH=UNKNOWN_ARCH
+endif
+
+ifeq ($(OS), linux)
+  SO=so
+  OBJ=o
+  EXE=
+  O=-o
+  LINKO=-o
+  GTEST_LIB=$(GTEST_ROOT)/make/$(BUILD)-gtest_main.a
+else ifeq ($(OS), darwin)
+  SO=so
+  OBJ=o
+  EXE=
+  O=-o
+  LINKO=-Wl,-o,
+  GTEST_LIB=$(GTEST_ROOT)/make/$(BUILD)-gtest_main.a
+else ifeq ($(OS), windows)
+  SO=dll
+  OBJ=obj
+  EXE=.exe
+  O=/Fo
+  LINKO=/OUT:
+  ARCHFLAGS=
+  CXX=cl
+  LD=link
+  CXXFLAGS=/c /MT /EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /O2
+  GTEST_LIB=$(GTEST_ROOT)/msvc/gtest/Release/gtest.lib
+else
+  OS=UNKNOWN_OS
+endif
+
+all: $(BIN)racecheck_unittest-$(BUILD) $(BIN)demo_tests-$(BUILD) $(BIN)bigtest-$(BUILD)
+
+bin:
+	mkdir -p bin
 
 DYNAMIC_ANNOTATIONS_DIR=../dynamic_annotations
 DYNAMIC_ANNOTATIONS_H=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.h
 DYNAMIC_ANNOTATIONS_C=${DYNAMIC_ANNOTATIONS_DIR}/dynamic_annotations.c
-DYNAMIC_ANNOTATIONS_O=dynamic_annotations.o
+DYNAMIC_ANNOTATIONS_O=$(BIN)dynamic_annotations-$(BUILD).$(OBJ)
 DYNAMIC_ANNOTATIONS=${DYNAMIC_ANNOTATIONS_C} ${DYNAMIC_ANNOTATIONS_H}
-GOOGLETEST_ROOT=../third_party/googletest
 
-racecheck_unittest: racecheck_unittest.o old_test_suite.o posix_tests.o \
-		${GOOGLETEST_ROOT}/make/gtest_main.a ${DYNAMIC_ANNOTATIONS_O}
-	${CXX} -lpthread $^ -o $@
+$(BIN)racecheck_unittest-$(BUILD): $(BIN)racecheck_unittest-$(BUILD).$(OBJ) $(BIN)old_test_suite-$(BUILD).$(OBJ) \
+		$(BIN)posix_tests-$(BUILD).$(OBJ) $(GTEST_LIB)  ${DYNAMIC_ANNOTATIONS_O} | bin
+	${CXX} ${LDFLAGS} $^ -lpthread -o $@
 
-demo_tests: old_test_suite.o demo_tests.o \
-		${GOOGLETEST_ROOT}/make/gtest_main.a ${DYNAMIC_ANNOTATIONS_O}
-	${CXX} -lpthread $^ -o $@
+$(BIN)demo_tests-$(BUILD): $(BIN)old_test_suite-$(BUILD).$(OBJ) $(BIN)demo_tests-$(BUILD).$(OBJ) \
+		$(GTEST_LIB) ${DYNAMIC_ANNOTATIONS_O} | bin
+	${CXX} $^ -lpthread -o $@
 
-bigtest: bigtest.o ${DYNAMIC_ANNOTATIONS_O}
-	${CXX} -lpthread $^ -o $@
+$(BIN)bigtest-$(BUILD): $(BIN)bigtest-$(BUILD).$(OBJ) ${DYNAMIC_ANNOTATIONS_O} | bin
+	${CXX} $^ -lpthread -o $@
 
-${GOOGLETEST_ROOT}/make/gtest_main.a:
-	cd ${GOOGLETEST_ROOT}/make && make clean && make
+$(GTEST_LIB):
+	cd $(GTEST_ROOT)/make && $(MAKE) clean && $(MAKE) CXXFLAGS="$(CXXFLAGS)" && mv gtest_main.a $(BUILD)-gtest_main.a
 
-%.o: %.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_pthread.h old_test_suite.h test_utils.h
+$(BIN)%-$(BUILD).$(OBJ): %.cc ${DYNAMIC_ANNOTATIONS} thread_wrappers.h thread_wrappers_pthread.h old_test_suite.h test_utils.h | bin
 	${CXX} ${CXXFLAGS} $< -Wall -Werror -Wno-sign-compare -Wshadow -Wno-unused-function \
-		 -I${DYNAMIC_ANNOTATIONS_DIR} -I${GOOGLETEST_ROOT}/include \
+		 -I${DYNAMIC_ANNOTATIONS_DIR} -I${GTEST_ROOT}/include \
 		 -g -DDYNAMIC_ANNOTATIONS_ENABLED=1 -c -o $@
 
 ${DYNAMIC_ANNOTATIONS_O}: ${DYNAMIC_ANNOTATIONS_C}
@@ -40,14 +110,14 @@ ${DYNAMIC_ANNOTATIONS_O}: ${DYNAMIC_ANNOTATIONS_C}
 # TODO(timurrrr): do smarter dependency list
 win: racecheck_unittest.cc old_test_suite.cc windows_tests.cc demo_tests.cc ${DYNAMIC_ANNOTATIONS} \
      thread_wrappers.h thread_wrappers_win.h old_test_suite.h test_utils.h
-	cd ${GOOGLETEST_ROOT}/msvc && devenv /build debug /project gtest gtest.sln
+	cd ${GTEST_ROOT}/msvc && devenv /build debug /project gtest gtest.sln
 	cl.exe ${CXXFLAGS} /Od /Zi /EHsc /nologo /MTd \
 		/D "DYNAMIC_ANNOTATIONS_ENABLED=1" /D "WIN32" \
-		-I${DYNAMIC_ANNOTATIONS_DIR} -I${GOOGLETEST_ROOT}/include \
+		-I${DYNAMIC_ANNOTATIONS_DIR} -I${GTEST_ROOT}/include \
 		racecheck_unittest.cc old_test_suite.cc windows_tests.cc \
-		${DYNAMIC_ANNOTATIONS_C} ${GOOGLETEST_ROOT}/msvc/gtest/Debug/gtestd.lib
+		${DYNAMIC_ANNOTATIONS_C} ${GTEST_ROOT}/msvc/gtest/Debug/gtestd.lib
 
 
 clean:
-	rm -rf racecheck_unittest demo_tests bigtest *.o *.O1 *.O2 *.obj *.dSYM *.exe *.pdb *.ilk *.idb *.manifest
-	cd ${GOOGLETEST_ROOT}/make && make clean
+	rm -rf bin racecheck_unittest demo_tests bigtest *.o *.O1 *.O2 *.obj *.dSYM *.exe *.pdb *.ilk *.idb *.manifest
+	cd ${GTEST_ROOT}/make && rm -f *-gtest_main.a && make clean
