Keep debug information in unit test binary in windows.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1457 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -10,7 +10,7 @@ ARCHFLAGS=
 STATICFLAGS=
 CFLAGS=$(COPT) $(ARCHFLAGS) $(EXTRA_CFLAGS)
 CXXFLAGS=$(CXXOPT) $(ARCHFLAGS) $(EXTRA_CXXFLAGS)
-LDFLAGS=$(ARCHFLAGS) $(STATICFLAGS)
+LDFLAGS=$(LDOPT) $(ARCHFLAGS) $(STATICFLAGS)
 OS=   # linux, darwin
 ARCH= # x86, amd64
 OX=    # O0, O1, ...
@@ -62,6 +62,7 @@ else ifeq ($(OS), windows)
   CXX=cl
   CC=cl
   LD=link
+  LDOPT=/DEBUG
   EXTRA_CXXFLAGS=/EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /D "WIN32"
   EXTRA_CFLAGS=/EHs- /EHa- /wd4530   /D_CRT_SECURE_NO_DEPRECATE /D_SECURE_SCL=0 /nologo /Gy /D "WIN32"
 else
