Upgrade gtest.sln before building gtest.
git-svn-id: http://data-race-test.googlecode.com/svn/trunk@1464 93a3164d-3a44-0410-8ae5-4baa038b0729

--- a/unittest/Makefile
+++ b/unittest/Makefile
@@ -121,7 +121,7 @@ $(BIN)bigtest-$(BUILD)$(EXE): $(BIN)bigtest-$(BUILD).$(OBJ) ${DYNAMIC_ANNOTATION
 
 ifeq ($(OS), windows)
 $(GTEST_LIB):
-	cd $(GTEST_ROOT)/msvc && devenv /build $(GTEST_BUILD) /project gtest gtest.sln
+	cd $(GTEST_ROOT)/msvc && devenv /upgrade gtest.sln && devenv /build $(GTEST_BUILD) /project gtest gtest.sln
 else
 $(BIN)racecheck_unittest-$(BUILD)$(EXE): $(BIN)posix_tests-$(BUILD).$(OBJ)
 $(GTEST_LIB):
